WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33752
Assertion failure when getting a href attribute with prefix
https://bugs.webkit.org/show_bug.cgi?id=33752
Summary
Assertion failure when getting a href attribute with prefix
Alexey Proskuryakov
Reported
2010-01-15 19:27:04 PST
NamedNodeMap::getAttributeItem() reasonably assumes that an attribute with null namespace will also have a null prefix. But we actually let one create nodes with null namespace and non-null prefix, due to a bug introduced in <
http://trac.webkit.org/changeset/9639
>. Patch forthcoming.
Attachments
proposed fix
(10.04 KB, patch)
2010-01-15 19:37 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2010-01-15 19:37:49 PST
Created
attachment 46727
[details]
proposed fix
Darin Adler
Comment 2
2010-01-16 10:39:37 PST
Comment on
attachment 46727
[details]
proposed fix Normally if you are comparing an atomic string to a string constant, we use an atomic string constant to make the check less expensive. I suggest we add the strings "xmlns", "
http://www.w3.org/2000/xmlns/
", and "xml" all to XMLNames.h alongside xmlNamespaceURI and use named constants instead of literal strings. I'm going to say review+ but I am close to a review- because I'd like us to use atomic strings when comparing with other atomic strings.
Darin Adler
Comment 3
2010-01-16 11:48:34 PST
Comment on
attachment 46727
[details]
proposed fix Oops, I said review+ but then chose review-!
Alexey Proskuryakov
Comment 4
2010-01-16 12:54:27 PST
Committed <
http://trac.webkit.org/changeset/53363
>.
Lucas Forschler
Comment 5
2019-02-06 09:03:22 PST
Mass moving XML DOM bugs to the "DOM" Component.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug