        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=33752
        Assertion failure when getting a href attribute with prefix

        This was due to a temporary change made in 2005 (r9639) - checks in checkSetPrefix were
        disabled during introduction of QualifiedName, but never re-enabled.

        Tests: fast/dom/bad-href-attribute.html
               fast/dom/node-prefix-setter-namespace-exception.html

        * dom/Attr.cpp: (WebCore::Attr::setPrefix):
        * dom/Element.cpp: (WebCore::Element::setPrefix):
        * dom/Node.cpp: (WebCore::Node::checkSetPrefix):
        Re-enabled the checks. Also, changed the prefix setter to treat "" as null, matching Firefox
        (DOM 3 Core spec says this behavior is implementation defined).



Canonical link: https://commits.webkit.org/44767@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53363 268f45cc-cd09-0410-ab3c-d52691b4dbfc